--- a/style.css
+++ b/style.css
@@ -2,33 +2,41 @@ body{
     background-color: rgb(45, 86, 173);
 }
 
-.card, .cardA{
+header{
+    text-align: center;
+
+}
+
+.card, .cardA, .cardH{
     width: 130px;
     height: 170px;
     float: left;
     background-image: url('images/karta.png');
     cursor: pointer;
     margin: 10px;
-    position: relative;
-    left:10%;
+    position:relative;
+    left:15%;
 }
 
 
 
-.cardA{
+.cardA, .cardH{
     transition: 500ms;
+}
+
+.cardH{
+    cursor:auto;
+    opacity: 0;
 }
 
 .gameboard{
     position: relative;
-    left: 30%;
-    width: 800px;
-    border: 1px solid black;
-    height: 600px;
+    left: 20%;
+    width: 900px;
+    height: 800px;
     padding: 10px;
 }
 .container{
     text-align: center;
-    border: 1px solid black;
     height: 700px;
 }
