--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 body{
-    background-color: rgb(45, 86, 173);
+    background-color: #0f0f0b;
+    font-family: 'Roboto', sans-serif;
+    color:#ccb73f;
 }
 
 header{
     text-align: center;
-
+    font-size: 30px;
+    height: 70px;
+    
 }
 
 .card, .cardA, .cardH{
     width: 130px;
     height: 170px;
     float: left;
-    background-image: url('images/karta.png');
+    background-image: url('images/back.jpg');
     cursor: pointer;
     margin: 10px;
     position:relative;
@@ -26,17 +32,40 @@ header{
 
 .cardH{
     cursor:auto;
-    opacity: 0;
 }
 
 .gameboard{
     position: relative;
-    left: 20%;
-    width: 900px;
+    left: 10%;
+    width: 1200px;
     height: 800px;
     padding: 10px;
 }
 .container{
     text-align: center;
-    height: 700px;
+    height: 500px;
+}
+
+.starter{
+    text-align: center;
+}
+
+
+select{
+    width: 100px;
+
+}
+
+button{
+    width: 250px;
+    height: 50px;
+    border-radius:10px;
+    background-color: #23c43e;
+    border: none;
+    cursor: pointer;
+    transition: 500ms;
+}
+
+button:hover{
+    background-color: #11a21d;
 }
