--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header{
     
 }
 
-.card, .cardA, .cardH{
+.card, .cardH{
     width: 130px;
     height: 170px;
     float: left;
@@ -21,12 +21,12 @@ header{
     cursor: pointer;
     margin: 10px;
     position:relative;
-    left:15%;
+    left:250px;
 }
 
 
 
-.cardA, .cardH{
+.cardH, .card{
     transition: 500ms;
 }
 
@@ -36,7 +36,7 @@ header{
 
 .gameboard{
     position: relative;
-    left: 10%;
+    left: 20%;
     width: 1200px;
     height: 800px;
     padding: 10px;
@@ -52,7 +52,12 @@ header{
 
 
 select{
-    width: 100px;
+    width: 200px;
+    height: 30px;
+    border-radius: 13px;
+    font-size: 20px;
+    text-align: center;
+    background-color: rgb(102, 204, 185);
 
 }
 
@@ -64,6 +69,7 @@ button{
     border: none;
     cursor: pointer;
     transition: 500ms;
+    font-size: 20px;
 }
 
 button:hover{
